# dl_project

./: .gitignore  README.md  calculate_plot_data.py  codebase.txt  dashboard.html  plot_results.py  pyproject.toml  top_1000_words.txt
KWSFSL/: metric_learning.py  metrics.py  parser_kws.py  test_fewshots_classifiers_openset.py  utils.py
KWSFSL/classifiers/: NCM.py
KWSFSL/data/: GSCSpeechData.py  MSWCData.py  MSWCFoldersData.py  data_utils.py
KWSFSL/models/: __init__.py  preprocessing.py  repr_model.py
KWSFSL/models/encoder/: ViT.py  profile_models.py  verify_vit.py
results/dscnnlln/: best_model.pt  calculated_plot_data.json  evalGSC_fsl_ncm_NORM_junior:lay:material:mixed:thomas:exist:fruit:girls:boys:break:educated,offer:paid:increased:laughed:length:mayor:michael:traffic:flame:boss_10_5_25  evalGSC_fsl_ncm_NORM_junior:lay:material:mixed:thomas:exist:fruit:girls:boys:break:educated,offer:paid:increased:laughed:length:mayor:michael:traffic:flame:boss_5_5_25  opt.json  trace.txt
results/vit_experiment/: calculated_plot_data.json  evalGSC_fsl_ncm_NORM_junior:lay:material:mixed:thomas:exist:fruit:girls:boys:break:educated,offer:paid:increased:laughed:length:mayor:michael:traffic:flame:boss_10_5_25  evalGSC_fsl_ncm_NORM_junior:lay:material:mixed:thomas:exist:fruit:girls:boys:break:educated,offer:paid:increased:laughed:length:mayor:michael:traffic:flame:boss_5_5_25  opt.json  trace.txt
